--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group = 'com.github.pjfanning'
+version = '0.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -14,6 +15,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.14.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+application {
+    mainClass = 'com.github.pjfanning.releasevalidator.JarValidator'
 }
 
 test {
